# sami-backend

./: .gitignore  CLAUDE.md  Dockerfile  README.md  implementation.md  optim.md  prompt_test_implem.md  pyproject.toml  test-implem.md  websocket-test.html
.claude/: settings.local.json
alembic/: env.py  seed.py
alembic/versions/: 0edb4b07b264_add_forecast_system_tables.py  59cf6a80bc33_add_schedule_performance_indexes.py  67b4e523cd2c_initial_migration.py  d40d2afa67f3_add_poster_column_to_movies_table.py
app/: config.py  database.py  exceptions.py  logging.py  main.py  middleware.py
app/api/: __init__.py  analytics.py  chat.py  cinemas.py  forecasts.py  movies.py  schedules.py
app/gemini/: __init__.py  client.py  function_executor.py  function_schemas.py  processor.py
app/models/: __init__.py  chat.py  cinema.py  forecast.py  movie.py  schedule.py
app/notifications/: __init__.py  broadcaster.py  events.py  handlers.py
app/services/: __init__.py  analytics_service.py  chat_persistence_service.py  chat_service.py  cinema_service.py  forecast_service.py  movie_service.py  optimization_service.py  prediction_service.py  schedule_service.py
app/websocket/: handlers.py  manager.py
tests/: README.md  __init__.py  conftest.py  run_prompt_tests.py  test_ai_integration.py  test_basic_flows.py  test_rest_apis.py  utils.py
tests/old_tests_backup/: conftest_new.py  prompt_tester.py  run_tests.py  utils_new.py
