[tool.poetry]
name = "sami-backend"
version = "0.1.0"
description = "SAMi Backend API - FastAPI backend for cinema schedule management"
authors = ["Claude"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
websockets = "^12.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.3"
psycopg2-binary = "^2.9.10"
google-generativeai = "^0.8.5"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = "^6.1.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"